--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-up-button": "^1.6.4",
+    "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
